--- a/mines.html
+++ b/mines.html
@@ -576,10 +576,10 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // Game state
+            // Game state - СТАВКА ВСЕГДА 1.00
             const gameState = {
                 balance: 10.5,
-                currentBet: 1.00,
+                currentBet: 1.00, // Всегда 1.00
                 minesCount: 5,
                 gameActive: false,
                 revealedCells: 0,
@@ -605,11 +605,11 @@
             const betButtons = document.querySelectorAll('.bet-button');
             const depositBtn = document.querySelector('.deposit-btn');
 
-            // Сохранение состояния игры
+            // Сохранение состояния игры - НЕ СОХРАНЯЕМ СТАВКУ
             function saveGameState() {
                 const stateToSave = {
                     balance: gameState.balance,
-                    currentBet: gameState.currentBet,
+                    // currentBet НЕ сохраняем - всегда 1.00
                     minesCount: gameState.minesCount,
                     gameActive: gameState.gameActive,
                     revealedCells: gameState.revealedCells,
@@ -621,15 +621,15 @@
                 localStorage.setItem('minesGameState', JSON.stringify(stateToSave));
             }
 
-            // Загрузка состояния игры
+            // Загрузка состояния игры - НЕ ВОССТАНАВЛИВАЕМ СТАВКУ
             function loadGameState() {
                 const savedState = localStorage.getItem('minesGameState');
                 if (savedState) {
                     const state = JSON.parse(savedState);
 
-                    // Восстанавливаем все данные
+                    // Восстанавливаем все данные, КРОМЕ СТАВКИ
                     gameState.balance = state.balance || 10.5;
-                    gameState.currentBet = state.currentBet || 1.00;
+                    // currentBet всегда 1.00 - не восстанавливаем
                     gameState.minesCount = state.minesCount || 5;
                     gameState.gameActive = state.gameActive || false;
                     gameState.revealedCells = state.revealedCells || 0;
@@ -735,7 +735,7 @@
                 // Пытаемся загрузить сохраненное состояние
                 const hasSavedState = loadGameState();
 
-                // ОБНОВЛЯЕМ ПОЛЕ СТАВКИ ПЕРЕД ОТОБРАЖЕНИЕМ
+                // ВСЕГДА ставим ставку 1.00
                 updateBetInput();
 
                 updateMultipliers();
@@ -752,12 +752,9 @@
 
                 // Event listeners
                 betInput.addEventListener('input', function() {
-                    gameState.currentBet = parseFloat(this.value) || 1.00;
-                    if (gameState.currentBet < 1.00) {
-                        gameState.currentBet = 1.00;
-                        updateBetInput();
-                    }
-                    saveGameState();
+                    // ВСЕГДА ставим 1.00
+                    this.value = '1.00';
+                    gameState.currentBet = 1.00;
                 });
 
                 mineOptions.forEach(option => {
@@ -778,13 +775,9 @@
                 betButtons.forEach(button => {
                     button.addEventListener('click', function() {
                         const action = this.getAttribute('data-action');
-                        if (action === 'half') {
-                            gameState.currentBet = Math.max(1.00, gameState.currentBet / 2);
-                        } else if (action === 'double') {
-                            gameState.currentBet = gameState.currentBet * 2;
-                        }
-                        updateBetInput();
-                        saveGameState();
+                        // ВСЕГДА ставим 1.00, кнопки не работают
+                        betInput.value = '1.00';
+                        gameState.currentBet = 1.00;
                     });
                 });
 
@@ -835,9 +828,10 @@
                 balanceElement.textContent = gameState.balance.toFixed(2) + ' TON';
             }
 
-            // Update bet input - ВАЖНОЕ ИСПРАВЛЕНИЕ
+            // Update bet input - ВСЕГДА 1.00
             function updateBetInput() {
-                betInput.value = gameState.currentBet.toFixed(2);
+                betInput.value = '1.00';
+                gameState.currentBet = 1.00;
             }
 
             // Update bet buttons state
@@ -879,13 +873,16 @@
             function startGame() {
                 if (gameState.gameActive) return;
 
-                if (gameState.currentBet > gameState.balance) {
+                // ВСЕГДА используем ставку 1.00
+                const betAmount = 1.00;
+                
+                if (betAmount > gameState.balance) {
                     showMessage("Недостаточно средств!", "lose");
                     return;
                 }
 
                 // Deduct bet from balance
-                updateBalance(-gameState.currentBet);
+                updateBalance(-betAmount);
 
                 // Reset game state
                 gameState.gameActive = true;
